--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "mysql": "^2.5.5",
     "socket.io": "^1.3.4",
     "socket.io-client": "^1.3.4"
-  }
+  },
+  "scripts": {
+  	"test": "./node_modules/mocha/bin/mocha"
+	}
 }
