--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "socket.io-client": "^1.3.4"
   },
   "scripts": {
+  	"start": "node ./server.js",
   	"test": "./node_modules/mocha/bin/mocha"
 	}
 }
