--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bcrypt": "^0.8.1",
     "body-parser": "^1.12.0",
+    "cors": "^2.5.3",
     "coveralls": "^2.11.2",
     "expect.js": "^0.3.1",
     "express": "^4.12.0",
