--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "CalendarServer",
   "main": "startServer.js",
   "dependencies": {
+    "async": "^0.9.0",
     "bcrypt": "^0.8.1",
     "body-parser": "^1.12.0",
     "cors": "^2.5.3",
