--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "superagent": "^0.21.0"
   },
   "scripts": {
-    "test": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "test": "./node_modules/mocha/bin/mocha",
     "local-test": "./node_modules/mocha/bin/mocha"
   }
 }
